Fixed alignment in title and main content blocks

--- a/static/css/v2-rtl.css
+++ b/static/css/v2-rtl.css
@@ -13,3 +13,35 @@
     clear: both;
     visibility: hidden;
 }
+
+/* to fix title alignment */
+.article .title h1{
+	padding-right: 0px;
+	padding-left: 100px;
+	margin-right: 100px;
+}
+
+.title section a{
+	left:none;
+	right:10px;
+}
+
+
+/* to fix main body blocks alignment */
+.article .content-wrapper .content{
+	margin-left: 0px;
+	margin-right: 315px;
+}
+#article-meta{
+	right: 17px;
+}
+
+#article-meta.sticky{
+	margin-right: 17px;
+}
+
+
+
+
+
+
